--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.14.11",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.17",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "smpte-timecode": "^1.3.5",
+        "styled-components": "^6.1.8",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -39,6 +42,7 @@
         ]
     },
     "devDependencies": {
-        "typescript": "^5.2.2"
+        "@types/smpte-timecode": "^1.2.4",
+        "typescript": "^5.4.2"
     }
 }
