--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,9 @@
     "jsx": "react-jsx"
   },
   "include": ["./src", "*.ts", "*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  // "typeRoots": [
+  //   "./typings",
+  //   "./node_modules/@types/"
+  // ]
 }
