--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,5 @@
     "jsx": "react-jsx"
   },
   "include": ["./src", "*.ts", "*.tsx"],
-  "exclude": ["node_modules"],
-  // "typeRoots": [
-  //   "./typings",
-  //   "./node_modules/@types/"
-  // ]
+  "exclude": ["node_modules"]
 }
